--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,9 @@ phases:
     commands:
       - echo Build started on `date`
       - mvn package
+  postbuild:
+    commands:
+      - rm target/project2_api-1.0-SNAPSHOT.jar.original
 
 artifacts:
   files:
