--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo Build started on `date`
       - mvn package
-  postbuild:
+  post_build:
     commands:
       - rm target/project2_api-1.0-SNAPSHOT.jar.original
 
